--- a/renren-admin/src/main/resources/templates/index.html
+++ b/renren-admin/src/main/resources/templates/index.html
@@ -90,7 +90,7 @@
                     </a>
                 </li>
                     <li class="layui-nav-item layui-hide-xs" lay-unselect>
-                        <a href="modules/fullPage/index.html" target="_blank">
+                        <a href="javascript:;" @click="toFullPage">
                         <!--<a href="${request.contextPath}/templates/modules/fullPage/index.html" target="_blank">-->
                             大数据展示
                         </a>
