--- a/renren-admin/src/main/resources/templates/modules/fullPage/index2.html
+++ b/renren-admin/src/main/resources/templates/modules/fullPage/index2.html
@@ -16,7 +16,7 @@
 		<div class="bgDiv"></div>
 		<div id="box">
 			<header>
-				<img width="" src="${request.contextPath}/statics/css/fullPage/img/logo.png" />
+				<img @click="toHome" width="" src="${request.contextPath}/statics/css/fullPage/img/logo.png" />
 				<span class="titleHeader">
 					长子县智慧农业监控数据中心
 				</span>
