--- a/renren-admin/src/main/resources/templates/modules/fullPage/index3.html
+++ b/renren-admin/src/main/resources/templates/modules/fullPage/index3.html
@@ -16,7 +16,7 @@
 		<div class="bgDiv"></div>
 		<div id="box">
 			<header>
-				<img @click="toHome" width="" src="${request.contextPath}/statics/css/fullPage/img/logo.png" />
+				<img width="" src="${request.contextPath}/statics/css/fullPage/img/logo.png" />
 				<span class="titleHeader">
 					长子县智慧农业监控数据中心
 				</span>
@@ -182,7 +182,7 @@
 		<!--<script src="js/timepeople.js" type="text/javascript" charset="utf-8"></script>-->
 		<script src="${request.contextPath}/statics/js/fullPage/chart.js" type="text/javascript" charset="utf-8"></script>
 		
-		<script src="${request.contextPath}/statics/js/fullPage/index.js" type="text/javascript" charset="utf-8"></script>
+		<script src="${request.contextPath}/statics/js/fullPage/index3.js" type="text/javascript" charset="utf-8"></script>
 	</body>
 
 </html>
