--- a/renren-admin/src/main/resources/statics/css/fullPage/common.css
+++ b/renren-admin/src/main/resources/statics/css/fullPage/common.css
@@ -174,7 +174,7 @@ header .rightHeader a i , header .rightHeader a{
     height:100%;
 }
 #zoom-marker-img-alt{
-    opacity: 0;
+    /*opacity: 0;*/
 }
 #imgBg{
     position: absolute;
