--- a/renren-admin/src/main/resources/templates/modules/sys/user.html
+++ b/renren-admin/src/main/resources/templates/modules/sys/user.html
@@ -43,6 +43,12 @@
 				<div class="form-group">
 					<div class="col-sm-2 control-label">用户名</div>
 					<div class="col-sm-10">
+						<input type="text" class="form-control" v-model="user.displayName" placeholder="登录账号"/>
+					</div>
+				</div>
+				<div class="form-group">
+					<div class="col-sm-2 control-label">账户名</div>
+					<div class="col-sm-10">
 						<input type="text" class="form-control" v-model="user.username" placeholder="登录账号"/>
 					</div>
 				</div>
