--- a/renren-admin/src/main/resources/templates/modules/fullPage/index2.html
+++ b/renren-admin/src/main/resources/templates/modules/fullPage/index2.html
@@ -52,7 +52,7 @@
 									<th>设备状态</th>
 								</tr>
 								<tr v-for="item in tableData">
-									<td>{{item.regionId}}</td>
+									<td>{{item.regionName}}</td>
 									<td>{{item.deviceName}}</td>
 									<td>{{item.ip}}</td>
 									<td>
@@ -68,36 +68,68 @@
 					<div class="statis">
 						<div>
 							<div class="">
-								<span class="num" style="color: #ea6666;">21.7</span> ℃<br />
+								<span class="num" style="color: #ea6666;">{{info['温度']}}</span><br />
 								<span class="dec">温度</span>
 							</div>
 							<span class="lineSpan"></span>
 							<div class="">
-								<span class="num" style="color: #ec914f;">33.7%</span> RH<br />
+								<span class="num" style="color: #ec914f;">{{info['湿度']}}</span><br />
 								<span class="dec">湿度</span>
 							</div>
 							<span class="lineSpan"></span>
 							<div class="">
-								<span class="num" style="color: #f5dd64;">1.2</span> kPa<br />
+								<span class="num" style="color: #f5dd64;">{{info['大气压']}}</span><br />
 								<span class="dec">大气压力</span>
 							</div>
 						</div>
 						<div>
 							<div class="">
-								<span class="num" style="color: #f5dd64;">12.4</span> mm/min<br />
+								<span class="num" style="color: #f5dd64;">{{info['雨量']}}</span><br />
 								<span class="dec">雨量</span>
 							</div>
 							<span class="lineSpan"></span>
 							<div class="">
-								<span class="num" style="color: #a4f16b;">0.0</span> m/s<br />
+								<span class="num" style="color: #a4f16b;">{{info['风速']}}</span><br />
 								<span class="dec">风速</span>
 							</div>
 							<span class="lineSpan"></span>
 							<div class="">
-								<span class="num" style="color: #74ecf9;">东南</span> <br />
+								<span class="num" style="color: #74ecf9;">{{info['风向']}}</span> <br />
 								<span class="dec">风向</span>
 							</div>
 						</div>
+						<!--<div>-->
+							<!--<div class="">-->
+								<!--<span class="num" style="color: #ea6666;">21.7</span> ℃<br />-->
+								<!--<span class="dec">温度</span>-->
+							<!--</div>-->
+							<!--<span class="lineSpan"></span>-->
+							<!--<div class="">-->
+								<!--<span class="num" style="color: #ec914f;">33.7%</span> RH<br />-->
+								<!--<span class="dec">湿度</span>-->
+							<!--</div>-->
+							<!--<span class="lineSpan"></span>-->
+							<!--<div class="">-->
+								<!--<span class="num" style="color: #f5dd64;">1.2</span> kPa<br />-->
+								<!--<span class="dec">大气压力</span>-->
+							<!--</div>-->
+						<!--</div>-->
+						<!--<div>-->
+							<!--<div class="">-->
+								<!--<span class="num" style="color: #f5dd64;">12.4</span> mm/min<br />-->
+								<!--<span class="dec">雨量</span>-->
+							<!--</div>-->
+							<!--<span class="lineSpan"></span>-->
+							<!--<div class="">-->
+								<!--<span class="num" style="color: #a4f16b;">0.0</span> m/s<br />-->
+								<!--<span class="dec">风速</span>-->
+							<!--</div>-->
+							<!--<span class="lineSpan"></span>-->
+							<!--<div class="">-->
+								<!--<span class="num" style="color: #74ecf9;">东南</span> <br />-->
+								<!--<span class="dec">风向</span>-->
+							<!--</div>-->
+						<!--</div>-->
 						<img class="leftBottom" src="${request.contextPath}/statics/css/fullPage/img/statLeft.png" />
 						<img class="rightTop" src="${request.contextPath}/statics/css/fullPage/img/statRight.png" />
 					</div>
